--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cookiecord",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "src/index.ts",
   "repository": "git@github.com:ronthecookie/cookiecord.git",
   "author": "RONTheCookie <me@ronthecookie.me>",
   "license": "MIT",
@@ -9,7 +9,8 @@
     "@types/node": "^12.7.2",
     "discord.js": "discordjs/discord.js",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^8.3.0"
+    "ts-node": "^8.3.0",
+    "yargs-parser": "^13.1.1"
   },
   "scripts": {
     "start": "ts-node src"
