--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "RONTheCookie <me@ronthecookie.me>",
   "license": "MIT",
   "dependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^12.7.2",
     "discord.js": "discordjs/discord.js",
+    "dotenv": "^8.1.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.3.0",
     "yargs-parser": "^13.1.1"
