--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "cookiecord",
-  "version": "0.0.1",
-  "main": "src/index.ts",
-  "repository": "git@github.com:ronthecookie/cookiecord.git",
-  "author": "RONTheCookie <me@ronthecookie.me>",
-  "license": "MIT",
-  "dependencies": {
-    "@types/dotenv": "^6.1.1",
-    "@types/node": "^12.7.2",
-    "discord.js": "discordjs/discord.js",
-    "dotenv": "^8.1.0",
-    "reflect-metadata": "^0.1.13",
-    "ts-node": "^8.3.0",
-    "yargs-parser": "^13.1.1"
-  },
-  "scripts": {
-    "start": "ts-node src"
-  }
+    "name": "cookiecord",
+    "version": "0.0.1",
+    "main": "src/index.ts",
+    "repository": "git@github.com:ronthecookie/cookiecord.git",
+    "author": "RONTheCookie <me@ronthecookie.me>",
+    "license": "MIT",
+    "dependencies": {
+        "@types/node": "^12.7.2",
+        "discord.js": "discordjs/discord.js",
+        "reflect-metadata": "^0.1.13"
+    },
+    "scripts": {
+        "start": "ts-node src"
+    },
+    "devDependencies": {
+        "ts-node": "^8.4.1"
+    }
 }
