try to fix weird problem

--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
     "name": "cookiecord",
     "version": "0.0.1",
-    "main": "src/index.ts",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
     "repository": "git@github.com:ronthecookie/cookiecord.git",
     "author": "RONTheCookie <me@ronthecookie.me>",
     "license": "GPL-3.0",
     "dependencies": {
         "@types/node": "^12.7.2",
+        "@types/ws": "^6.0.3",
         "discord.js": "discordjs/discord.js",
-        "reflect-metadata": "^0.1.13"
+        "reflect-metadata": "^0.1.13",
+        "typescript": "^3.6.3"
     },
     "scripts": {
-        "start": "ts-node src"
+		"install": "tsc"
     },
     "devDependencies": {
         "ts-node": "^8.4.1"
