--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/node": "^13.5.0",
         "@types/ws": "^6.0.3",
         "dotenv": "^8.2.0",
+        "prettier": "^1.19.1",
         "reflect-metadata": "^0.1.13",
         "ts-node": "^8.4.1",
         "typescript": "^3.6.3"
