Refactor API: no more module injection into the client

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "discord.js": "discordjs/discord.js"
     },
     "scripts": {
-        "prepublish": "tsc",
+        "prepublish": "rm -rf dist && tsc",
         "example": "ts-node example",
         "prettify": "prettier --write **/**"
     },
