--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "author": "RONTheCookie <me@ronthecookie.me>",
     "license": "GPL-3.0",
     "dependencies": {
-        "discord.js": "discordjs/discord.js"
+        "@types/dotenv-safe": "^8.1.0",
+        "discord.js": "discordjs/discord.js",
+        "dotenv-safe": "^8.2.0"
     },
     "scripts": {
         "prepublish": "rm -rf dist && tsc",
-        "example": "ts-node example",
+        "example": "cd example && ts-node .",
         "prettify": "prettier --write **/**"
     },
     "devDependencies": {
         "@hapi/joi": "^16.1.7",
-        "@types/dotenv": "^8.2.0",
         "@types/node": "^13.5.0",
         "@types/ws": "^6.0.3",
-        "dotenv": "^8.2.0",
         "prettier": "^1.19.1",
         "reflect-metadata": "^0.1.13",
         "ts-node": "^8.4.1",
