--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "@types/dotenv-safe": "^8.1.0",
         "@types/humanize-duration": "^3.18.0",
+        "chokidar": "^3.3.1",
         "discord.js": "discordjs/discord.js",
         "dotenv-safe": "^8.2.0",
         "humanize-duration": "^3.21.0"
