--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
     "version": "0.0.5",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
-    "repository": "git@github.com:ronthecookie/cookiecord.git",
-    "author": "RONTheCookie <me@ronthecookie.me>",
+    "homepage": "https://github.com/cookiecord/cookiecord",
+    "author": {
+        "name": "Ron B",
+        "email": "me@ronthecookie.me",
+        "url": "https://ronthecookie.me"
+    },
     "license": "GPL-3.0",
+    "repository": "cookiecord/cookiecord",
     "dependencies": {
-        "@types/dotenv-safe": "^8.1.0",
-        "@types/humanize-duration": "^3.18.0",
         "chokidar": "^3.3.1",
         "discord.js": "discordjs/discord.js",
         "dotenv-safe": "^8.2.0",
@@ -21,6 +24,8 @@
     },
     "devDependencies": {
         "@hapi/joi": "^16.1.7",
+        "@types/dotenv-safe": "^8.1.0",
+        "@types/humanize-duration": "^3.18.0",
         "@types/node": "^13.5.0",
         "@types/ws": "^6.0.3",
         "prettier": "^1.19.1",
