--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "cookiecord",
     "version": "0.0.5",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "main": "dist/src/index.js",
+    "types": "dist/src/index.d.ts",
     "homepage": "https://github.com/cookiecord/cookiecord",
     "author": {
         "name": "Ron B",
@@ -17,6 +17,7 @@
         "commander": "^4.1.1",
         "discord.js": "discordjs/discord.js",
         "dotenv-safe": "^8.2.0",
+        "fs-extra": "^8.1.0",
         "humanize-duration": "^3.21.0"
     },
     "scripts": {
@@ -27,6 +28,7 @@
     "devDependencies": {
         "@hapi/joi": "^16.1.7",
         "@types/dotenv-safe": "^8.1.0",
+        "@types/fs-extra": "^8.0.1",
         "@types/humanize-duration": "^3.18.0",
         "@types/node": "^13.5.0",
         "@types/ws": "^6.0.3",
