--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-minimal
 title: Cookiecord Guide
+description: Cookiecord is an experimental discord bot framework built in TypeScript using decorators.
