Switch to AGPL3 (read full)
I did this because cookiecord is a library and GPL-3 is technically less "free" then AGPL-3

Proof from past contributor:
https://i.ronthecookie.me/YuyG6Pp.png

https://discordapp.com/channels/@me/680535254456729882/697776796350808175

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "email": "me@ronthecookie.me",
         "url": "https://ronthecookie.me"
     },
-    "license": "GPL-3.0",
+    "license": "AGPL-3.0",
     "repository": "cookiecord/cookiecord",
     "dependencies": {
         "chokidar": "^3.3.1",
