--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "typescript.tsdk": "node_modules/typescript/lib",
-    "discord.enable": true
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
