--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
         "reflect-metadata": "^0.1.13"
     },
     "scripts": {
-        "prepublish": "rm -rf dist && tsc",
+        "prepublish": "rm -rf dist && tsc && yarn docgen",
         "example": "cd example && ts-node .",
-        "prettify": "prettier --write \"{src,example}/**/*.ts\""
+        "prettify": "prettier --write \"{src,example}/**/*.ts\"",
+        "docgen": "typedoc --out docs/api --readme none --name 'Cookiecord API' src"
     },
     "devDependencies": {
         "@types/dotenv-safe": "^8.1.0",
@@ -25,6 +26,7 @@
         "@types/ws": "^6.0.3",
         "prettier": "^1.19.1",
         "ts-node": "^8.4.1",
-        "typescript": "^3.8.3"
+        "typedoc": "^0.19.1",
+        "typescript": "^4.0.2"
     }
 }
