--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "discord.js": "discordjs/discord.js#stable",
         "dotenv-safe": "^8.2.0",
         "humanize-duration": "^3.21.0",
-        "reflect-metadata": "^0.1.13"
+        "reflect-metadata": "^0.1.13",
+        "rm": "^0.1.8"
     },
     "scripts": {
         "prepublish": "rm -rf dist && tsc && yarn docgen",
