--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "license": "LGPL-3.0",
     "repository": "https://github.com/cookiecord/cookiecord",
     "dependencies": {
-        "chokidar": "^3.3.1",
-        "discord.js": "discordjs/discord.js#d0bc4d7ff037035d4f315a0286b06f0a1ade29c1",
+        "chokidar": "^3.5.2",
+        "discord.js": "^13.3.1",
         "dotenv-safe": "^8.2.0",
-        "humanize-duration": "^3.21.0",
+        "humanize-duration": "^3.27.0",
         "reflect-metadata": "^0.1.13"
     },
     "scripts": {
@@ -20,13 +20,13 @@
         "docgen": "typedoc --out docs/api --readme none --name 'Cookiecord API' src"
     },
     "devDependencies": {
-        "@types/dotenv-safe": "^8.1.0",
-        "@types/humanize-duration": "^3.18.0",
-        "@types/node": "^13.5.0",
-        "@types/ws": "^6.0.3",
-        "prettier": "^1.19.1",
-        "ts-node": "^8.4.1",
-        "typedoc": "^0.21.4",
-        "typescript": "^4.3.5"
+        "@types/dotenv-safe": "^8.1.2",
+        "@types/humanize-duration": "^3.27.0",
+        "@types/node": "^16.11.7",
+        "@types/ws": "^8.2.0",
+        "prettier": "^2.4.1",
+        "ts-node": "^10.4.0",
+        "typedoc": "^0.22.8",
+        "typescript": "^4.4.4"
     }
 }
