--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "repository": "https://github.com/cookiecord/cookiecord",
     "dependencies": {
         "chokidar": "^3.3.1",
-        "discord.js": "13.8.1",
+        "discord.js": "^13.16.0",
         "dotenv-safe": "^8.2.0",
         "humanize-duration": "^3.21.0",
         "reflect-metadata": "^0.1.13"
